# go-mod-checker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/agents/: docs.agent.md
go_mod_checker/: __init__.py  checker.py  cli.py
tests/: test_parser.py
