[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go-mod-checker"
version = "0.2.0"
description = "A command-line tool to check Go module dependencies status"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "kennycyb"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
    "colorama>=0.4.6",
    "packaging>=20.0",
]

[project.scripts]
go-mod-checker = "go_mod_checker.cli:main"

[project.urls]
Homepage = "https://github.com/kennycyb/go-mod-checker"
Repository = "https://github.com/kennycyb/go-mod-checker"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["go_mod_checker*"]
exclude = ["tests*"]
